# dotnet-grpc-library-api

./: .env.example  .gitignore  Directory.Build.props  Directory.Packages.props  Dockerfile.tests  LibrarySystem.Linux.slnf  LibrarySystem.sln  README.md  compose.prod.yaml  compose.tests.yaml  compose.yaml  coverage.runsettings
.github/: dependabot.yml
.github/workflows/: main.yml  sast.yml
Docs/adr/: 001-waf-strategy.md  002-wpf-mvvm-client.md  003-cpp-edge-device-can-telemetry.md
LibrarySystem.Api/: Dockerfile  LibrarySystem.Api.csproj  LibrarySystem.Api.http  Program.cs  appsettings.Development.json  appsettings.Development.json.example
LibrarySystem.Api/Controllers/: BooksController.cs  BorrowersController.cs  LendingController.cs
LibrarySystem.Api/Dtos/: CreateBookDto.cs  CreateLendingDto.cs  UpdateBookDto.cs
LibrarySystem.Api/Marker/: ApiMarker.cs  IApiMarker.cs
LibrarySystem.Api/Properties/: launchSettings.json
LibrarySystem.Api/Protos/: library.proto
LibrarySystem.Application/: DependencyInjection.cs  LibrarySystem.Application.csproj
LibrarySystem.Application/Abstractions/: ITelemetryHub.cs
LibrarySystem.Application/DTOs/: BookDto.cs  LendingDto.cs
LibrarySystem.Application/EventHandlers/: DeviceFrameReceivedEventHandler.cs
LibrarySystem.Benchmarks/: LibrarySystem.Benchmarks.csproj  Program.cs
LibrarySystem.Contracts/: LibrarySystem.Contracts.csproj
LibrarySystem.Contracts/Protos/: compute.proto  kiosk.proto  library.proto
LibrarySystem.Domain/Entities/: Book.cs  Borrower.cs  CardMapping.cs  LendingActivity.cs  ProcessedEvent.cs
LibrarySystem.Grpc/: Dockerfile  LibrarySystem.Grpc.csproj  Program.cs  appsettings.Development.json.example  appsettings.json
LibrarySystem.Grpc/Interceptors/: ApiKeyInterceptor.cs  DeviceIdentityInterceptor.cs
LibrarySystem.Grpc/Properties/: launchSettings.json
LibrarySystem.Grpc/Protos/: library.proto
LibrarySystem.Grpc/Services/: GrpcComputeHashingService.cs  KioskService.cs  LibraryService.cs  TelemetryGrpcService.cs  TelemetryHub.cs  WafLogService.cs
LibrarySystem.IntegrationTests/: BooksControllerTests.cs  BorrowersControllerTests.cs  CustomWebApplicationFactory.cs  KioskIdempotencyTests.cs  LendingControllerTests.cs  LibrarySystem.IntegrationTests.csproj
LibrarySystem.Persistence/: DependencyInjection.cs  LibraryDbContext.cs  LibrarySystem.Persistence.csproj  SeedData.cs
LibrarySystem.Persistence/Configurations/: BookConfiguration.cs  BorrowerConfiguration.cs  CardMappingConfiguration.cs  LendingActivityConfiguration.cs  ProcessedEventConfiguration.cs
LibrarySystem.Persistence/Entities/: Book.cs  Borrower.cs  LendingActivity.cs
LibrarySystem.Persistence/Migrations/: 20250811103700_InitialCreate.Designer.cs  20250811103700_InitialCreate.cs  20251207205826_ImplementRichDomain.Designer.cs  20251207205826_ImplementRichDomain.cs  20251208182950_FixPendingModelChanges.cs  (+8 more)
LibrarySystem.Tools/: App.xaml  App.xaml.cs  LibrarySystem.Tools.csproj  MainWindow.xaml  MainWindow.xaml.cs  appsettings.Development.json.example  appsettings.json
LibrarySystem.Tools.UnitTests/: LibrarySystem.Tools.UnitTests.csproj
LibrarySystem.TrafficGenerator/: LibrarySystem.TrafficGenerator.csproj  Program.cs
LibrarySystem.UnitTests/: LibraryServiceTests.cs  LibrarySystem.UnitTests.csproj
Waf/: Caddyfile  Dockerfile  REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf  coraza.conf
WarmupTasks/: Program.cs  WarmupTasks.csproj
clients/cpp/: CMakeLists.txt  Dockerfile  Dockerfile.ci  VERSIONS.md  vcpkg.json
clients/cpp/bench/: OfflineStoreBench.cpp
clients/cpp/cmake/: Protobuf.cmake
clients/cpp/scripts/: setup-vcan.sh
clients/cpp/src/: CanReader.cpp  CanReader.h  DeviceLink.cpp  DeviceLink.h  KioskClient.cpp  KioskClient.h  OfflineStore.cpp  OfflineStore.h  SignalCodec.cpp  SignalCodec.h  config.cpp  config.h  main.cpp
clients/cpp/tests/: CanReaderTests.cpp  OfflineIntegrationTests.cpp  OfflineStoreTests.cpp  SignalCodecTests.cpp
clients/cpp/toolchains/: aarch64-musl.cmake
scripts/: e2e-test.sh  gen-dev-ca.sh
services/cpp-compute/: CMakeLists.txt  Dockerfile  Dockerfile.ci  README.md  vcpkg.json
services/cpp-compute/cmake/: Protobuf.cmake
services/cpp-compute/src/: ImageFeatureExtractor.cpp  ImageFeatureExtractor.h  main.cpp
services/cpp-compute/tests/: ImageFeatureExtractorTests.cpp
tools/: README.md  can-generator.py  kiosk.dbc
triplets/: x64-linux-rel.cmake
(+91 files in other folders)
